--- a/host.html
+++ b/host.html
@@ -80,7 +80,7 @@ div {
       </div>
     </div>
     </div>
-
+<a href ="https://github.com/Siumi234/new-week-6/edit/main/host.html"> View in Github</a>
     
     
 
